--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,8 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: SSH@0
+  inputs:
+    runOptions: 'commands'
+    commands: 'allure --help'
+    readyTimeout: '20000'
